@@ -1426,46 +1426,54 @@ class BuildEnvironment:
         old_secnumbers = self.toc_secnumbers
         self.toc_secnumbers = {}
 
-        def _walk_toc(node, secnums, titlenode=None):
+        def _walk_toc(node, secnums, depth, titlenode=None):
             # titlenode is the title of the document, it will get assigned a
             # secnumber too, so that it shows up in next/prev/parent rellinks
             for subnode in node.children:
                 if isinstance(subnode, nodes.bullet_list):
                     numstack.append(0)
-                    _walk_toc(subnode, secnums, titlenode)
+                    _walk_toc(subnode, secnums, depth-1, titlenode)
                     numstack.pop()
                     titlenode = None
                 elif isinstance(subnode, nodes.list_item):
-                    _walk_toc(subnode, secnums, titlenode)
+                    _walk_toc(subnode, secnums, depth, titlenode)
                     titlenode = None
                 elif isinstance(subnode, addnodes.compact_paragraph):
                     numstack[-1] += 1
+                    if depth > 0:
+                        number = tuple(numstack)
+                    else:
+                        number = None
                     secnums[subnode[0]['anchorname']] = \
-                        subnode[0]['secnumber'] = tuple(numstack)
+                        subnode[0]['secnumber'] = number
                     if titlenode:
-                        titlenode['secnumber'] = tuple(numstack)
+                        titlenode['secnumber'] = number
                         titlenode = None
                 elif isinstance(subnode, addnodes.toctree):
-                    _walk_toctree(subnode)
+                    _walk_toctree(subnode, depth)
 
-        def _walk_toctree(toctreenode):
+        def _walk_toctree(toctreenode, depth):
+            if depth == 0:
+                return
             for (title, ref) in toctreenode['entries']:
                 if url_re.match(ref) or ref == 'self':
                     # don't mess with those
                     continue
                 if ref in self.tocs:
                     secnums = self.toc_secnumbers[ref] = {}
-                    _walk_toc(self.tocs[ref], secnums, self.titles.get(ref))
+                    _walk_toc(self.tocs[ref], secnums, depth,
+                              self.titles.get(ref))
                     if secnums != old_secnumbers.get(ref):
                         rewrite_needed.append(ref)
 
         for docname in self.numbered_toctrees:
             doctree = self.get_doctree(docname)
             for toctreenode in doctree.traverse(addnodes.toctree):
-                if toctreenode.get('numbered'):
+                depth = toctreenode.get('numbered', 0)
+                if depth:
                     # every numbered toctree gets new numbering
                     numstack = [0]
-                    _walk_toctree(toctreenode)
+                    _walk_toctree(toctreenode, depth)
 
         return rewrite_needed
 
